--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "NODE_ENV=development node backend/server.js",
     "start": "NODE_ENV=production node backend/server.js",
     
-    "build": "npm install && npm run install --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
